--- a/AutoCAD_Windows/AutoCAD_Windows/Property/Editor/ECheckBox.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/Property/Editor/ECheckBox.xaml
@@ -28,8 +28,9 @@
             <ColumnDefinition Width="3*" />
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Text="{Binding Path=PropertyItem.PropertyName}" />
-        <CheckBox IsChecked="{Binding Path=PropertyItem.Values[0]}"
+        <TextBlock Text="{Binding Path=PropertyItem.Name}" />
+        <CheckBox IsChecked="{Binding Path=PropertyItem.SelectedValue}"
+                  Loaded="Property_Loaded"
                   Grid.Column="1" />
     </Grid>
 </ListViewItem>
