--- a/AutoCAD_Windows/AutoCAD_Windows/Property/Editor/ETextBox.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/Property/Editor/ETextBox.xaml
@@ -29,36 +29,10 @@
             <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Text="{Binding Path=PropertyItem.PropertyName}"/>
-        <TextBox x:Name="textbox"
-                 x:FieldModifier="private"
-                 Text="{Binding Path=PropertyItem.Values[0]}"
+        <TextBlock Text="{Binding Path=PropertyItem.Name}"/>
+        <TextBox Text="{Binding Path=PropertyItem.SelectedValue}"
+                 Loaded="Property_Loaded"
+                 KeyUp="TextBox_KeyUp"
                  Grid.Column="1" />
-        <Popup x:Name="popup"
-               x:FieldModifier="private"
-               AllowsTransparency="True"
-               IsOpen="False"
-               Placement="Top"
-               PopupAnimation="Slide"
-               StaysOpen="True"
-               Visibility="Visible"
-               VerticalOffset="-1">
-            <Popup.PlacementTarget>
-                <Binding ElementName="textbox" />
-            </Popup.PlacementTarget>
-            <Border Background="White"
-                    BorderBrush="Red"
-                    BorderThickness="1"
-                    CornerRadius="3"
-                    Margin="1,1,1,1">
-                <TextBlock x:Name="popuptext"
-                           x:FieldModifier="private"
-                           Foreground="Red"
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center"
-                           Margin="0"
-                           TextWrapping="Wrap" />
-            </Border>
-        </Popup>
     </Grid>
 </ListViewItem>
